--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGO_URL = mongodb+srv://chovatiyamehul2003:Ex0kcmXa9nkR2Umu@cluster0.xfdlw1v.mongodb.net/
-PORT = 4004
-CLIENT_URL = http://localhost:3000
+PORT = 8000
+CLIENT_URL = http://ec2-13-126-66-156.ap-south-1.compute.amazonaws.com
 MAIL_SENDER = senderfromern@gmail.com
 MAIL_PASS = vgghkoksogbhhtve
 ADMIN_EMAIL = mgchovatiya2003@gmail.com
