--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install 
 COPY . .
-
+RUN npm run build
 EXPOSE 3000 
 CMD ["npm", "run", "start"]
