--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,8 @@
-FROM node AS Frontend
+FROM node:latest AS Frontend
 WORKDIR /usr/src/app
-RUN ls -l
 COPY package*.json .
 RUN npm install 
 COPY . .
 RUN npm run build
 EXPOSE 3000 
-CMD ["npm", "start"]
+CMD ["npm", "run" "start"]
