--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:latest AS Frontend
 WORKDIR /usr/src/app
-COPY client\package*.json .
+COPY package*.json .
 RUN npm install 
 COPY . .
 RUN npm run build
