--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:21 AS Backend
 WORKDIR /usr/src/app
-COPY package*.json .
+COPY package*.json ./
 COPY . .
 RUN npm install --production
 
