--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@ FROM node:21 AS Backend
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY . .
-RUN npm install --production
+RUN npm install 
 
 EXPOSE 8000
 CMD ["node", "index.js"]
