--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:21 AS Frontend
+FROM node AS Frontend
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install 
 COPY . .
-RUN npm run build
+
 EXPOSE 3000 
 CMD ["npm", "run" "start"]
