--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,8 @@
 FROM node AS Backend
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install --production
+RUN ls package.json && npm install --production || echo "package.json not found"
+
 COPY . .
 
 EXPOSE 8000
