--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,9 @@
 FROM node AS Backend
-WORKDIR /usr/src/app
-COPY package*.json ./
+WORKDIR /usr/src/app/server
+COPY server/package*.json ./
 RUN ls package.json && npm install --production || echo "package.json not found"
 
-COPY . .
+COPY server/ .
 
 EXPOSE 8000
 CMD ["node", "index.js"]
