--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           task-definition: backend-task-definition.json
           container-name: ${{ env.CONTAINER_NAME_BACKEND }}
-          image: ${{ steps.build-backend-image.outputs.backend_image }}
+          image: ${{ env.backend_image }}
 
       # Attaching Frontend Image to task definition 
       - name: Fill in the new frontend image ID in the Amazon ECS task definition
@@ -78,7 +78,7 @@ jobs:
         with:
           task-definition: frontend-task-definition.json
           container-name: ${{ env.CONTAINER_NAME_FRONTEND }}
-          image: ${{ steps.build-frontend-image.outputs.frontend_image }}
+          image: ${{ env.frontend_image }}
 
       
 
