--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ env:
   ECS_SERVICE_FRONTEND: frontend-service 
   ECS_SERVICE_BACKEND: backend-service 
   ECS_CLUSTER: VenisECSClusterProject
-  CONTAINER_NAME_FRONTEND: frontend
+  CONTAINER_NAME_FRONTEND: frontend-task
   CONTAINER_NAME_BACKEND: backend
 
 jobs:
