--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,10 @@ on:
 # Environment Variables
 env:
   AWS_REGION: ap-south-1
-  ECS_SERVICE_FRONTEND: frontend-service 
-  ECS_SERVICE_BACKEND: backend-service 
-  ECS_CLUSTER: VenisECSClusterProject
-  CONTAINER_NAME_FRONTEND: frontend-task
+  ECS_SERVICE_FRONTEND: Project-frontend-service
+  ECS_SERVICE_BACKEND: Project-backend-service
+  ECS_CLUSTER: VenisProjectCluster
+  CONTAINER_NAME_FRONTEND: frontend
   CONTAINER_NAME_BACKEND: backend
 
 jobs:
@@ -44,7 +44,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
-          REPOSITORY: backend
+          REPOSITORY: backend-repo
         run: |
           docker build -t $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG -f server/Dockerfile .
           docker push $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG
@@ -56,7 +56,7 @@ jobs:
         env: 
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
-          REPOSITORY: frontend
+          REPOSITORY: frontend-repo
         run: |
           docker build -t $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG -f client/Dockerfile .
           docker push $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG
