--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,14 +2,14 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches:
-      # - main
+      - main
 
 # Environment Variables
 env:
   AWS_REGION: ap-south-1
   ECS_SERVICE_FRONTEND: Project-frontend-service
   ECS_SERVICE_BACKEND: Project-backend-service
-  ECS_CLUSTER: MehulProjectCluster
+  ECS_CLUSTER: VenisCSPCluste
   CONTAINER_NAME_FRONTEND: frontend
   CONTAINER_NAME_BACKEND: backend
 
